--- a/views/search.ejs
+++ b/views/search.ejs
@@ -43,14 +43,48 @@
                 <div class="col-lg-12" style="background-color: lightgray">
                         
                         <div class="jumbotron; col-lg-12">
-                            <h4>Unregister Company?:</h4>
+        
                             <hr style="border:groove;color: black">
-                            <form method="post" action= "/company_unreg">
+                            <form method="post" action= "/search/company">
+                                <h4 style="font-weight: 700;">Search Company:</h4>
                                 <p>
                                     <span style="font-family: cursive;font-weight: 700;font-size: 16px;color: brown">Company's Name:</span>
                                     <input type="text" name="company_name" placeholder="Company's Name" style="margin-left: 33px">
+                                    
                                 </p>
-                                <input type="submit" value="Unregister Company" class="btn btn-info">
+
+                                <p>
+                                    <span style="font-family: cursive;font-weight: 700;font-size: 16px;color: brown">CTC:</span>
+                                    <input type="number" name="ctc" placeholder="CTC" style="margin-left: 132px">
+                                    
+                                </p>
+                                <p>
+                                    <span style="font-family: cursive;font-weight: 700;font-size: 16px;color: brown">Department:</span>
+                                    <input type="text" name="department" placeholder="Department" style="margin-left: 72px">
+                                    
+                                </p>
+                                <input type="submit" value="Search Company" class="btn btn-info" style="margin-left: 175px; margin-top: 5px;">
+                            </form>
+                            <form method="post" action= "/search/student">
+                                <hr style="border:groove;color: black">
+                                <hr style="border:groove;color: black">
+                                <h4 style="font-weight: 700;">Search Student:</h4>
+
+                                <p>
+                                    <span style="font-family: cursive;font-weight: 700;font-size: 16px;color: brown">Student's Name:</span>
+                                    <input type="text" name="student_name" placeholder="Student's Name" style="margin-left: 35px">
+                                </p>
+
+                                <p>
+                                    <span style="font-family: cursive;font-weight: 700;font-size: 16px;color: brown">CGPA:</span>
+                                    <input type="number" name="cgpa" placeholder="CGPA" style="margin-left: 120px">
+                                </p>
+                                <p>
+                                    <span style="font-family: cursive;font-weight: 700;font-size: 16px;color: brown">Department:</span>
+                                    <input type="text" name="student_department" placeholder="Department" style="margin-left: 71px">
+                                </p>
+                                <input type="submit" value="Search Student" class="btn btn-info" style="margin-left: 175px; margin-top: 5px;">
+                                <hr style="border:groove;color: black">
                                 <hr style="border:groove;color: black">
                             </form>
                     </div>
